# travel-world

./: README.md  main.py  pyproject.toml
server/: .gitignore  pyproject.toml
server/app/: Config.py  __init__.py  main.py
server/app/api/: api.py
server/app/api/endpoints/: auth.py
server/app/core/: config.py
server/app/database/: __init__.py  base.py  session.py
server/app/database/connections/: db_abs.py  mongo.py
server/app/database/utils/: mongo.py
server/app/models/: token.py  user.py
server/app/schemas/: user.py
server/app/utilities/: utils.py
server/core/: server.py
server/core/factory/: factory.py
server/core/fastapi/dependencies/: authentication.py
